# h4cui

./: .flake8  .gitignore  LICENSE  README.md  license.txt  pyproject.toml  setup.iss  setup.py
.github/workflows/: python-app.yml
.harness/: Build_kj5dtv_h4cui_1715870490574-pr-trigger-input-set-1715870491388.yaml  Build_kj5dtv_h4cui_1715870490574-push-trigger-input-set-1715870492445.yaml
.harness/pipelines/: h4cui-1715870473663.yaml
misc/: buildlocal.bat  h4c-example.bat
src/: __init__.py  cnc_ports.py  com_wrapper.py  data_classes.py  h4cui.py  main.py
